# WaterBenchmarkHub

./: .gitignore  .readthedocs.yml  CITATION.cff  CY-DBP.inp  DEVELOPERS.md  LICENSE  MANIFEST.in  Makefile  README.md  REQUIREMENTS.txt  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: benchmark-resource-request-template.md
docs/: _config.yml  conf.py  how_to_contribute.rst  index.html  index.rst  installation.rst  water_benchmark_hub.battledim.rst  water_benchmark_hub.gecco_waterquality.rst  water_benchmark_hub.leakdb.rst  water_benchmark_hub.networks.rst  water_benchmark_hub.rst  water_benchmark_hub.water_usage.rst
docs/_benchmarks/: AI4WaterChlorinationChallenge.md  BATADAL.md  BIWS.md  BWCN.md  BWDF.md  BWN2.md  BattLeDIM.md  ClStateEstimate.md  DiTEC-WDN.md  GECCO-WaterQuality2017.md  GECCO-WaterQuality2018.md  GECCO-WaterQuality2019.md  KIOS-LeakDB.md  KIOS-WaterUsage.md  LeakG3PD.md  LeakTestbed.md  network-Anytown.md  network-BAK.md  network-BIN.md  network-BWSN-1.md  network-BWSN-2.md  network-CA1.md  (+54 more)
readthedocs/: basicusage.rst  conf.py  how_to_contribute.rst  index.rst  installation.rst  water_benchmark_hub.batadal.rst  water_benchmark_hub.bwdf.rst  water_benchmark_hub.gym.rst  water_benchmark_hub.networks.rst
tests/: test_batadal.py  test_battledim.py  test_bwsnnetworks.py  test_epanetexamples.py  test_gecco_waterquality.py  test_leakdb.py  test_leakg3pd.py  test_leaktestbed.py  test_ltown.py  test_networks.py  test_waterusage.py  utils.py
water_benchmark_hub/: __init__.py  benchmarks.py
webpage/: README.md  index.html
(+103 files in other folders)
