[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "water-benchmark-hub"
description = "WaterBenchmarkHub"
authors = [
    {name = "André Artelt", email = "aartelt@techfak.uni-bielefeld.de"}
]
license = {text = "MIT License"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
keywords=["water", "networks", "benchmarks", "data"]
dynamic = ["version", "readme", "dependencies"]

[project.urls]
Homepage = "https://github.com/WaterFutures/WaterBenchmarkHub"
Documentation = "https://water-benchmark-hub.readthedocs.io/en/latest/"
Repository = "https://github.com/WaterFutures/WaterBenchmarkHub.git"
Issues = "https://github.com/WaterFutures/WaterBenchmarkHub/issues"

[tool.setuptools.dynamic]
version = {file = "src/water_benchmark_hub/VERSION"}
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = {file = "REQUIREMENTS.txt"}
